--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,15 @@
   cursor: pointer;
 }
 
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 /* create new blog form */
 .create {
   max-width: 400px;
